# aoc2023

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/camel/: mod.rs
