[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
num = "0.4.1"
num-traits = "0.2.17"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.2"
